--- a/index.html
+++ b/index.html
@@ -8,60 +8,46 @@
 </head>
 <body>
 
-    <!-- Navigacija -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#hero">Početna</a></li>
-                <li><a href="#about">O nama</a></li>
-                <li><a href="#services">Usluge</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hero sekcija -->
+    <!-- Hero Sekcija -->
     <section id="hero">
         <div class="hero-content">
-            <h1>Dobrodošli u Transport Zonę</h1>
-            <p>Vaš partner za brzu i sigurnu logistiku.</p>
-            <a href="#contact" class="btn">Kontaktirajte nas</a>
+            <h1>Dobrodošli u Transport Zona</h1>
+            <p>Brza i pouzdana usluga prevoza i najam skele širom Srbije</p>
         </div>
     </section>
 
-    <!-- O nama -->
+    <!-- O Nama Sekcija -->
     <section id="about">
-        <h2>O nama</h2>
-        <p>Transport Zona je kompanija koja se bavi pružanjem logističkih rešenja za sve vrste transporta. Naša misija je da obezbedimo siguran, brz i efikasan transport vaših tereta.</p>
+        <div class="section-content">
+            <h2>O Nama</h2>
+            <p>Transport Zona je vodeća firma u oblasti transporta i najma skele...</p>
+        </div>
     </section>
 
-    <!-- Usluge -->
+    <!-- Usluge Sekcija -->
     <section id="services">
-        <h2>Naše usluge</h2>
-        <div class="service">
-            <h3>Brz transport</h3>
-            <p>Pružamo brzo i sigurno transportno rešenje za sve vrste tereta, bilo da je u pitanju lokalna ili međunarodna dostava.</p>
-        </div>
-        <div class="service">
-            <h3>Logistička podrška</h3>
-            <p>Naša logistička ekipa nudi pomoć u organizaciji prevoza, skladištenju i distribuciji proizvoda.</p>
-        </div>
-        <div class="service">
-            <h3>Prilagodljivi vozni park</h3>
-            <p>Imamo flotu različitih vozila, od kamiona do manjih dostavnih vozila, koja su prilagodljiva svim vašim potrebama.</p>
+        <div class="section-content">
+            <h2>Usluge</h2>
+            <ul>
+                <li>Transport</li>
+                <li>Najam Skele</li>
+                <li>Prevoz tereta</li>
+            </ul>
         </div>
     </section>
 
-    <!-- Kontakt -->
+    <!-- Kontakt Sekcija -->
     <section id="contact">
-        <h2>Kontaktirajte nas</h2>
-        <p>Za više informacija, možete nas kontaktirati putem emaila: <a href="mailto:info@transportzona.com">info@transportzona.com</a></p>
+        <div class="section-content">
+            <h2>Kontakt</h2>
+            <p>Za više informacija, kontaktirajte nas putem emaila...</p>
+        </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2025 Transport Zona - Sva prava zadržana</p>
-    </footer>
+    <!-- Dugme za povratak na vrh -->
+    <button id="scrollToTopBtn" class="scroll-to-top">
+        &#8593; <!-- Strelica prema gore -->
+    </button>
 
     <script src="script.js"></script>
 </body>
