--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 </head>
 <body>
 
-    <!-- Hero Sekcija -->
+    <!-- Hero Sekcija sa logom -->
     <section id="hero">
         <div class="hero-content">
+            <img src="logo.jpg" alt="Transport Zona Logo" id="logo">
             <h1>Dobrodošli u Transport Zona</h1>
             <p>Brza i pouzdana usluga prevoza i najam skele širom Srbije</p>
         </div>
     </section>
 
-    <!-- O Nama Sekcija -->
+    <!-- Ostale sekcije -->
     <section id="about">
         <div class="section-content">
             <h2>O Nama</h2>
@@ -24,7 +25,6 @@
         </div>
     </section>
 
-    <!-- Usluge Sekcija -->
     <section id="services">
         <div class="section-content">
             <h2>Usluge</h2>
@@ -36,7 +36,6 @@
         </div>
     </section>
 
-    <!-- Kontakt Sekcija -->
     <section id="contact">
         <div class="section-content">
             <h2>Kontakt</h2>
@@ -44,7 +43,7 @@
         </div>
     </section>
 
-    <!-- Dugme za povratak na vrh -->
+    <!-- Dugme za povratak na vrh stranice -->
     <button id="scrollToTopBtn" class="scroll-to-top">
         &#8593; <!-- Strelica prema gore -->
     </button>
