--- a/index.html
+++ b/index.html
@@ -3,49 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Transport Zona</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Hero Sekcija sa logom -->
-    <section id="hero">
-        <div class="hero-content">
+    <!-- Logo -->
+    <header>
+        <div id="logo-container">
             <img src="logo.jpg" alt="Transport Zona Logo" id="logo">
-            <h1>Dobrodošli u Transport Zona</h1>
-            <p>Brza i pouzdana usluga prevoza i najam skele širom Srbije</p>
         </div>
+    </header>
+
+    <!-- Hero Sekcija -->
+    <section id="hero">
+        <h1>Dobrodošli u Transport Zonę</h1>
+        <p>Vaš partner za sve usluge transporta i logistike</p>
+        <a href="#usluge" class="btn">Naše usluge</a>
     </section>
 
-    <!-- Ostale sekcije -->
-    <section id="about">
-        <div class="section-content">
-            <h2>O Nama</h2>
-            <p>Transport Zona je vodeća firma u oblasti transporta i najma skele...</p>
-        </div>
+    <!-- O nama Sekcija -->
+    <section id="o-nama" class="section-content">
+        <h2>O nama</h2>
+        <p>Transport Zona je lider u industriji transporta i logistike sa više od 10 godina iskustva. Pružamo brza i efikasna rešenja za sve vaše transportne potrebe.</p>
     </section>
 
-    <section id="services">
-        <div class="section-content">
-            <h2>Usluge</h2>
-            <ul>
-                <li>Transport</li>
-                <li>Najam Skele</li>
-                <li>Prevoz tereta</li>
-            </ul>
-        </div>
+    <!-- Usluge Sekcija -->
+    <section id="usluge" class="section-content">
+        <h2>Naše usluge</h2>
+        <ul>
+            <li>Brzi transport na nacionalnom nivou</li>
+            <li>Logistička rešenja za sve vrste robe</li>
+            <li>Fleksibilne cene i pouzdana dostava</li>
+        </ul>
     </section>
 
-    <section id="contact">
-        <div class="section-content">
-            <h2>Kontakt</h2>
-            <p>Za više informacija, kontaktirajte nas putem emaila...</p>
-        </div>
+    <!-- Kontakt Sekcija -->
+    <section id="kontakt" class="section-content">
+        <h2>Kontakt</h2>
+        <p>Kontaktirajte nas putem telefona ili e-maila kako biste započeli saradnju.</p>
+        <ul>
+            <li><strong>Telefon:</strong> +381 11 1234567</li>
+            <li><strong>Email:</strong> kontakt@transportzona.com</li>
+        </ul>
     </section>
 
-    <!-- Dugme za povratak na vrh stranice -->
+    <!-- Dugme za Povratak na Vrh -->
     <button id="scrollToTopBtn" class="scroll-to-top">
-        &#8593; <!-- Strelica prema gore -->
+        ↑
     </button>
 
     <script src="script.js"></script>
